# eGenko

./: README.md  meson.build
data/: app-style.css  eGenko.appdata.xml.in  eGenko.desktop.in  genkoyoshi.appdata.xml.in  genkoyoshi.desktop.in  gresources.xml  vertical-setting.json
data/gtk/: menus.ui
po/: POTFILES  com.github.aharotias2.eGenko.pot  com.github.aharotias2.genkoyoshi.pot  it.po  ja.po  meson.build
src/: action-type.vala  actiontype.vala  app-config-dialog.vala  app-config.vala  app-consts.vala  app-error.vala  app-window.vala  appconst.vala  apperror.vala  appwindow.vala  availability.vala  cell-position.vala  cellposition.vala  color-setting-dialog.vala  color-setting.vala  conv-type.vala  edit-mode.vala  enums.vala  focus-list.vala  font-setting.vala  gee-list-utils.vala  genko-holder.vala  genkoyoshi.vala  history-item.vala  history.vala  historyitem.vala  hurigana-helper.vala  main.vala  predefined-color-settings.vala  preset-color-settings.vala  region.vala  save-mode.vala  simple-list.vala  simplelist.vala  text-element.vala  text-model.vala  textelement.vala  textmodel.vala  utf8-utils.vala  utf8utils.vala  (+2 more)
src/actions/: abstract-edit-action.vala  delete-region-action.vala  edit-action-utils.vala  edit-action.vala  insert-text-action.vala
test/: cellpositiontest.vala  hurigana-helper-tests.vala  simple-list-tests.vala  simplelisttest.vala  text-model-tests.vala  textmodeltests.vala  utf8-utils-tests.vala
